test/classes/errors/nilability-return-yield/return-borrowed.good
return-borrowed.chpl:3: In function 'P':
return-borrowed.chpl:3: error: cannot return 'borrowed C?' when the declared return type is 'borrowed C'
